# freeflix

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  downloader-old.py  downloader.py  install.sh  pyproject.toml  requirements.txt  serve.py  shell.py  torage_mode_t.storage_mode_sparse  yify-downloader.service  yify_downloader.service
app/: config.py  main.py  models.py
app/api/: movies.py  schedules.py  streaming.py  torrents.py  users.py
app/assets/: manager.py
app/cron/: __init__.py  jobs.py
app/database/: __init__.py  mixins.py  models.py  schemas.py  session.py  utils.py
app/dependencies/: commons.py
app/middleware/: __init__.py  error_handler.py
app/patches/: __init__.py
app/scrapers/: rarbg.py  yts.py
app/services/: movies.py
app/torrent/: __init__.py  manager.py
app/utils/: user_agent.py
backend/: .dockerignore  .env.example  Dockerfile
backend/app/: config.py  main.py  models.py
backend/tests/: test_active_queue.py  test_activity.py  test_async_stream_endpoint.py  test_await_pieces_async.py  test_blocked_state.py  test_browse_params_api.py  test_candidate_helpers.py  test_catalog_browse_params.py  test_catalog_cache.py  test_catalog_media_type.py  test_catalog_normalize.py  test_classify_health.py  test_content_guard.py  test_content_guard_config.py  test_content_guard_manager.py  test_content_id.py  test_content_id_resolver.py  test_cron_select_parity.py  test_download_select.py  test_episodes.py  test_file_index_validation.py  test_force_start_release_on_finish.py  test_info_content_id.py  test_is_video_file_settings.py  test_lt_settings.py  test_migrations.py  test_on_piece_finished.py  test_per_torrent_conn_cap.py  test_piece_waiters.py  test_pieces_ready.py  test_precompute_episodes.py  test_prioritize_endpoint.py  (+35 more)
docs/: ARCHITECTURE.md
downloads/: .gitkeep
frontend/: .dockerignore  Dockerfile.frontend  next-config.js  next.config.ts  package-lock.json  package.json  tailwind-config.js  vitest.config.ts
scripts/: full-install.sh  install.sh  one-click-install.sh  start-docker.sh  start-services.sh  stop-services.sh
tests/: test_torrent.py
(+289 files in other folders)
