[tool.poetry]
name = "freeflix"
version = "0.1.0"
description = "Yify movie scraper"
authors = ["DuneRaccoon <benjamincsherro@hotmail.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "app" }
]


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
playwright = "^1.50.0"
httpx = "^0.25.0"
beautifulsoup4 = "^4.12.2"
torf = "^4.2.4"
leaky-bucket-py = "^0.1.3"
croniter = "^1.4.1"
APScheduler = "^3.10.4"
loguru = "^0.7.2"
libtorrent = "^2.0.11"
python-multipart = "^0.0.6"
sqlalchemy = "^1.4.31"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.9"
pytest = "^7.0.1"
pytest-asyncio = "^0.17.0"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.0"
ipython = "8.0.0"
nest_asyncio = "1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"